Add link to jstodola.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h2>Student pages</h2>
         <ul>
           <li><a href="people/bhogan.html">Brian Hogan (Instructor)</a></li>
+          <li><a href="people/jstodola.html">Jessica Stodola</a></li>
         </ul>
       </main>
 
