--- a/people/dvanslambrouck1.html
+++ b/people/dvanslambrouck1.html
@@ -2,9 +2,16 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Your page</title>
+    <title>David Van SlamBrouck</title>
   </head>
-  <body>
-  
+  <body id="mainVanslambrouck">
+    <main>
+      <section class="education"></section>
+      <section class="pastEmployment"></section>
+      <section class="otherExperience"></section>
+    </main>
+    <footer>
+      <a href="../index.html">Back to the home page</a>
+    </footer>
   </body>
 </html>
