Add Stylesheet link
Add link to main css file to dvanslambrouck1.html

--- a/people/dvanslambrouck1.html
+++ b/people/dvanslambrouck1.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
+    <link href="../css/style.css" rel="stylesheet">
     <title>David Van SlamBrouck</title>
   </head>
   <body id="mainVanslambrouck">
