--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <main>
         <h2>Student pages</h2>
         <ul>
+          <li><a href="people/zbaxter.html">Zach Baxter</a></li>
           <li><a href="people/bhogan.html">Brian Hogan (Instructor)</a></li>
           <li><a href="people/jstodola.html">Jessica Stodola</a></li>
           <li><a href="people/dvanslambrouck1.html">David Van SlamBrouck</a></li>
