Update lchase1.html - add social networking links, edit

--- a/people/lchase1.html
+++ b/people/lchase1.html
@@ -16,6 +16,7 @@
       </header>
 
       <section id="resume">
+        <h1>My Resume</h1>
         <h2>Summary of Qualifications</h2>
         <ul>
           <li>Extensive background in the operation and repair of personal computers, computer peripherals and computer networks, plus a wide variety of mechanical and electronic systems and equipment. Ability to troubleshoot and repair hardware and software. Great mechanical inclination, logic and reasoning skills. Skilled in many areas of the IT / computer field.</li>
@@ -87,7 +88,13 @@
       </section>
 
       <footer>
-        &copy; 2016 <a href="mailto:chase.luke.a@gmail.com">Luke A Chase</a>
+        <span id="footerLeft">&copy; 2016 <a href="mailto:chase.luke.a@gmail.com">Luke A Chase</a></span>
+        <span id="footerRight">
+          <a href="https://github.com/ChaseLukeA">GitHub</a>&nbsp;&nbsp;-&nbsp;
+          <a href="https://plus.google.com/107673361987682644353">Google+</a>&nbsp;&nbsp;-&nbsp;
+          <a href="https://www.linkedin.com/in/chaselukea">LinkedIn</a>&nbsp;&nbsp;-&nbsp;
+          <a href="https://twitter.com/Chase_Luke_A">Twitter</a>
+        </span>
       </footer>
 
     </div>
