Update lchase1.html, style.css - add home page link and styling

--- a/people/lchase1.html
+++ b/people/lchase1.html
@@ -87,6 +87,10 @@
         </ul>
       </section>
 
+      <section id="backLink">
+        <a href="../index.html">Back to Home Page</a>
+      </section>
+
       <footer>
         <span id="footerLeft">&copy; 2016 <a href="mailto:chase.luke.a@gmail.com">Luke A Chase</a></span>
         <span id="footerRight">
