--- a/people/zbaxter.html
+++ b/people/zbaxter.html
@@ -4,8 +4,25 @@
     <meta charset="utf-8">
     <title>Zach Baxter</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome.min.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora">
   </head>
   <body>
-
+    <div class="container">
+      <header>
+        <h1>Zachary E. Baxter</h1>
+        <div class="media">
+          <a title=Github" href="http://www.github.com/zbaxter7">
+          <i class="fa fa-github fa-lg"></i>
+          </a>
+          <a title="LinkedIn" href="http://www.linkedin.com/in/zach-baxter-330331b0">
+          <i class="fa fa-linkedin fa-lg"></i>
+          </a>
+          <a title="Gmail" href="mailto:zbax777@gmail.com">
+          <i class="fa fa-envelope fa-lg"></i>
+          </a>
+        </div>
+      </header>
+    </div>
   </body>
 </html>
