Fix type in css link

--- a/people/zbaxter.html
+++ b/people/zbaxter.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Zach Baxter</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/font-awesome.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora">
   </head>
   <body>
