Fix typo in css link

--- a/people/zbaxter.html
+++ b/people/zbaxter.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <title>Zach Baxter</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/font-awesome.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora">
   </head>
-  <body>
+  <body id="bhogan">
     <div class="container">
       <header>
         <h1>Zachary E. Baxter</h1>
         <div class="media">
-          <a title=Github" href="http://www.github.com/zbaxter7">
+          <a title="Github" href="http://www.github.com/zbaxter7">
           <i class="fa fa-github fa-lg"></i>
           </a>
           <a title="LinkedIn" href="http://www.linkedin.com/in/zach-baxter-330331b0">
