Add work experience section

--- a/people/zbaxter.html
+++ b/people/zbaxter.html
@@ -23,6 +23,18 @@
           </a>
         </div>
       </header>
+      <section class="experience">
+        <h1>Work Experience</h1>
+        <article>
+          <h2>
+            Developer Intern - Midwest Manufacturing - 2015-Present
+          </h2>
+          <ul>
+            <li>Built and maintained ASP.NET websites to display manufacturing plants' production data.</li>
+            <li>Created ASP.NET controls with DevExpress.</li>
+          </ul>
+        </article>
+      </section>
     </div>
   </body>
 </html>
