Added Teia Sweitzer link to index

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li><a href="people/lchase1.html">Luke A Chase</a></li>
           <li><a href="people/jstodola.html">Jessica Stodola</a></li>
           <li><a href="people/dvanslambrouck1.html">David Van SlamBrouck</a></li>
+          <li><a href="people/tsweitzer.html">Teia Sweitzer</a></li>
         </ul>
       </main>
 
