Removed award section

--- a/people/tsweitzer.html
+++ b/people/tsweitzer.html
@@ -16,19 +16,10 @@
 
       <section class="experience">
         <h1>Experience</h1>
-        <article>
-          <h2>
-            Babysitting 
-          </h2>
-        </article>
-
-      </section>
-
-      <section>
-        <h1>Software Projects</h1>
         <ul>
-         <li></li>
+          <li>Babysitting</li>
         </ul>
+
       </section>
 
 
@@ -50,11 +41,6 @@
         <article>
           <p>Chippewa Valley Technical College Information Technology- Software Developer, 2016</p>
         </article>
-      </section>
-
-      <section>
-        <h1>Awards</h1>
-
       </section>
 
       <section>
