Added some things to the skills software section

--- a/people/tsweitzer.html
+++ b/people/tsweitzer.html
@@ -29,7 +29,7 @@
         <ul>
           <li>Programming Languages: JavaScript, Java, HTML5, CSS3, PHP, SQL.</li>
           <li>Databases: MySQL, SQLite.</li>
-          <li>Software: Microsoft Office, Visual Studio, Adobe Photoshop, Excel, Visio, Git, Apache, Parallels, VirtualBox.</li>
+          <li>Software: Microsoft Office, Visual Studio, Adobe Photoshop, Netbeans, Notepad, Eclipse, Visio, Git, Apache, Parallels, VirtualBox.</li>
           <li>Operating Systems: Mac OSX, Microsoft Windows, Linux (Ubuntu.)</li>
         </ul>
       </section>
