--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="people/zbaxter.html">Zach Baxter</a></li>
           <li><a href="people/bhogan.html">Brian Hogan (Instructor)</a></li>
           <li><a href="people/lchase1.html">Luke A Chase</a></li>
+          <li><a href="people/charles1234.html">Charles Marion</a></li>
           <li><a href="people/jstodola.html">Jessica Stodola</a></li>
           <li><a href="people/dvanslambrouck1.html">David Van SlamBrouck</a></li>
           <li><a href="people/tsweitzer.html">Teia Sweitzer</a></li>
