--- a/people/zbaxter.html
+++ b/people/zbaxter.html
@@ -25,15 +25,30 @@
       </header>
       <section class="experience">
         <h1>Work Experience</h1>
+        
         <article>
           <h2>
             Developer Intern - Midwest Manufacturing - 2015-Present
           </h2>
           <ul>
-            <li>Built and maintained ASP.NET websites to display manufacturing plants' production data.</li>
-            <li>Created ASP.NET controls with DevExpress.</li>
+            <li>Built and maintained ASP.NET websites that displayed manufacturing plants' production data.</li>
+            <li>Created and implemented ASP.NET controls with DevExpress.</li>
+            <li>Fixed bugs on computerized maintenance management system (CMMS).</li> 
+            <li>Built webpages for various manufacturing plants that displayed data relating to CMMS</li> 
           </ul>
         </article>
+
+        <article>
+          <h2>
+            Machinist - Baxter Engines Inc. - 2010-2015
+          </h2>
+          <ul>
+            <li>Tore down and rebuilt engines.</li>
+            <li>Balanced engine crankshafts.</li>
+            <li>Bored and honed engine blocks.</li>
+          </ul>
+        </article>
+
       </section>
     </div>
   </body>
