--- a/people/zbaxter.html
+++ b/people/zbaxter.html
@@ -48,6 +48,21 @@
             <li>Bored and honed engine blocks.</li>
           </ul>
         </article>
+      
+      </section>
+
+      <section>
+        <h1>Education</h1>
+
+        <article>
+          <h2>
+            Chippewa Valley Technical College, Eau Claire, WI
+          </h2>
+          <ul>
+            <li>IT - Software Development.</li>
+            <li>Expected graduation date - May, 2015.</li>
+          </ul>
+        </article>
 
       </section>
     </div>
