Started technology section

--- a/people/zbaxter.html
+++ b/people/zbaxter.html
@@ -23,9 +23,9 @@
           </a>
         </div>
       </header>
-      <section class="experience">
-        <h1>Work Experience</h1>
-        
+
+      <section>
+        <h1>Work Experience</h1>  
         <article>
           <h2>
             Developer Intern - Midwest Manufacturing - 2015-Present
@@ -47,13 +47,21 @@
             <li>Balanced engine crankshafts.</li>
             <li>Bored and honed engine blocks.</li>
           </ul>
-        </article>
-      
+        </article> 
+      </section>
+
+      <section>
+        <h1>Technology</h1>
+        <ul>
+          <li>Programming Languages: JavaScript, Java, Visual Basic, C#, Ruby, HTML5, CSS3, SQL, Lua.</li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
       </section>
 
       <section>
         <h1>Education</h1>
-
         <article>
           <h2>
             Chippewa Valley Technical College, Eau Claire, WI
@@ -63,8 +71,8 @@
             <li>Expected graduation date - May, 2015.</li>
           </ul>
         </article>
-
       </section>
+
     </div>
   </body>
 </html>
