Create kolson133.html and add a link on index.html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <li><a href="people/cmarion3.html">Charles Marion</a></li>
           <li><a href="people/jstodola.html">Jessica Stodola</a></li>
           <li><a href="people/dvanslambrouck1.html">David Van SlamBrouck</a></li>
+          <li><a href="people/kolson133.html">Kevin Olson</a></li>
           <li><a href="people/tsweitzer.html">Teia Sweitzer</a></li>
         </ul>
       </main>
