add basic layout with placeholders

--- a/people/lmatysik.html
+++ b/people/lmatysik.html
@@ -2,9 +2,44 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
+    <link href="../css/style.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <title>Lance Matysik - Under Construction</title>
   </head>
-  <body>
-    <p>Under Construction</p>
+  <body id="lmatysik">
+    <header>
+      <h1>Lance Matysik - Under Construction</h1>
+          <div class="media">
+          <a title="Twitter"  href="http://twitter.com/lancematysik">
+          <i class="fa fa-twitter fa-lg"></i>
+          </a>
+          <a title="LinkedIn" href="https://www.linkedin.com/in/lance-matysik-b1578689">
+          <i class="fa fa-linkedin fa-lg"></i>
+          </a>
+          <a title="Github" href="http://www.github.com/lwmatysik">
+          <i class="fa fa-github fa-lg"></i>
+          </a>
+        </div>
+    </header>
+    <section>
+      <h2>Summary</h2>
+      <p>Summary goes here...</p>
+    </section>
+    <section>
+      <h2>Education</h2>
+      <p>Education goes here...</p>
+    </section>
+    <section>
+      <h2>Skills</h2>
+      <p>Skills go here...</p>
+    </section>
+    <section>
+      <h2>Work Experience</h2>
+      <p>Past jobs go here...</p>
+    </section>
+    <footer>
+      <a href="../index.html">Return to the home page</a>
+    </footer>
   </body>
 </html>
