add basic layout and styling

--- a/people/lmatysik.html
+++ b/people/lmatysik.html
@@ -9,9 +9,10 @@
   </head>
   <body id="lmatysik">
     <header>
-      <h1>Lance Matysik - Under Construction</h1>
-          <div class="media">
-          <a title="Twitter"  href="http://twitter.com/lancematysik">
+      <h2>Lance Matysik - Under Construction</h2>
+      <h3>Eau Claire, Wisconsin</h3>
+        <div>
+          <a title="Twitter" href="http://twitter.com/lancematysik">
           <i class="fa fa-twitter fa-lg"></i>
           </a>
           <a title="LinkedIn" href="https://www.linkedin.com/in/lance-matysik-b1578689">
@@ -23,19 +24,19 @@
         </div>
     </header>
     <section>
-      <h2>Summary</h2>
+      <h3>Summary</h3>
       <p>Summary goes here...</p>
     </section>
     <section>
-      <h2>Education</h2>
+      <h3>Education</h3>
       <p>Education goes here...</p>
     </section>
     <section>
-      <h2>Skills</h2>
+      <h3>Skills</h3>
       <p>Skills go here...</p>
     </section>
     <section>
-      <h2>Work Experience</h2>
+      <h3>Work Experience</h3>
       <p>Past jobs go here...</p>
     </section>
     <footer>
