added summary and education

--- a/people/lmatysik.html
+++ b/people/lmatysik.html
@@ -25,11 +25,31 @@
     </header>
     <section>
       <h3>Summary</h3>
-      <p>Summary goes here...</p>
+      <p>Seeking an internship opportunity to further enhance and develop my programming skills, interpersonal skills, and professionalism.</p>
     </section>
     <section>
       <h3>Education</h3>
-      <p>Education goes here...</p>
+      <article>
+        <h4>Chippewa Valley Technical College (IT-Software Developer/IT-Mobile Developer) 2014-Present</h4>
+        <ul>
+          <li>Expected graduation: August 2016</li>
+          <li>Awarded STEM Scholarship from the National Science Foundation</li>
+          <li>Current GPA: X.XX</li>
+          <li>Credits 54/74</li>
+          <li>Classes:</li>
+          <ul>
+            <li>Object Oriented Analysis and Design with Java</li>
+            <li>Objective-C</li>
+            <li>Advanced iOS Development (Swift)</li>
+            <li>Android Development</li>
+            <li>Database 2</li>
+            <li>Java Web Programming</li>
+            <li>Web 2 (jQuery) and Web 3 (Multimedia)</li>
+            <li>PHP</li>
+          </ul>
+        </ul>  
+
+      </article>
     </section>
     <section>
       <h3>Skills</h3>
