Added a link to kkaufman6.html to index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="people/dvanslambrouck1.html">David Van SlamBrouck</a></li>
           <li><a href="people/kolson133.html">Kevin Olson</a></li>
           <li><a href="people/tsweitzer.html">Teia Sweitzer</a></li>
+          <li><a href="people/kkaufman6.html">Kelsy Kaufman</a></li>
         </ul>
       </main>
 
