add abilities and skills

--- a/people/lmatysik.html
+++ b/people/lmatysik.html
@@ -47,13 +47,22 @@
             <li>Web 2 (jQuery) and Web 3 (Multimedia)</li>
             <li>PHP</li>
           </ul>
-        </ul>  
-
+        </ul>
       </article>
     </section>
     <section>
-      <h3>Skills</h3>
-      <p>Skills go here...</p>
+      <h3>Abilities and Skills</h3>
+      <article>
+        <ul>
+          <li>Fast learner, problem solving, excellent team player</li>
+          <li>Familiar with C++, Java, Swi , and Python</li>
+          <li>Familiar with Android and iOS mobile development platforms</li>
+          <li>Knowledge with HTML, CSS, JS+j ery, ASP.NET w/ C#, and PHP</li>
+          <li>Worked with Git and Github</li>
+          <li>Experience with SQL and Relational Database technologies</li>
+          <li>Proficient with Windows, Linux, and Macintosh operating environments</li>
+      </ul>
+      </article>
     </section>
     <section>
       <h3>Work Experience</h3>
