--- a/people/lmatysik.html
+++ b/people/lmatysik.html
@@ -55,9 +55,9 @@
       <article>
         <ul>
           <li>Fast learner, problem solving, excellent team player</li>
-          <li>Familiar with C++, Java, Swi , and Python</li>
+          <li>Familiar with C++, Java, Swift, and Python</li>
           <li>Familiar with Android and iOS mobile development platforms</li>
-          <li>Knowledge with HTML, CSS, JS+j ery, ASP.NET w/ C#, and PHP</li>
+          <li>Knowledge with HTML, CSS, JS+jQuery, ASP.NET w/ C#, and PHP</li>
           <li>Worked with Git and Github</li>
           <li>Experience with SQL and Relational Database technologies</li>
           <li>Proficient with Windows, Linux, and Macintosh operating environments</li>
@@ -66,7 +66,26 @@
     </section>
     <section>
       <h3>Work Experience</h3>
-      <p>Past jobs go here...</p>
+      <article>
+        <h4>Pioneer Hi-Bred International Inc. Eau Claire, WI (Researcher's Assistant) 2009-2015
+        <ul>
+          <li>Assisted the researcher’s with their genetic experiments</li>
+          <li>Entered research data into Excel spreadsheets</li>
+        </ul>
+      </article>
+      <article>
+          <h4>Hutchinson Technologies. Eau Claire, WI (Quality Auditor) 2009-2014</h4>
+          <ul>
+            <li>Ensured Hutchinson’s components met their specifications</li>
+            <li>Audited running processes to catch repeating defects</li>
+          </ul>
+      </article>
+      <article>
+        <h4>TTM Technologies. Chippewa Falls, WI (Operator) 2003-2007</h4>
+        <ul>
+          <li>Ran and maintained electroless plating line process for PCB manufacturing</li>
+          <li>Was trained on LEAN manufacturing techniques (5s, Kaizen, Kanban)</li>
+        </ul>
     </section>
     <footer>
       <a href="../index.html">Return to the home page</a>
