finalized stylesheet. removed under construction

--- a/people/lmatysik.html
+++ b/people/lmatysik.html
@@ -9,7 +9,7 @@
   </head>
   <body id="lmatysik">
     <header>
-      <h2>Lance Matysik - Under Construction</h2>
+      <h2>Lance Matysik</h2>
       <h3>Eau Claire, Wisconsin</h3>
         <div>
           <a title="Twitter" href="http://twitter.com/lancematysik">
