--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li><a href="people/bhogan.html">Brian Hogan (Instructor)</a></li>
           <li><a href="people/cmarion3.html">Charles Marion</a></li>
           <li><a href="people/lmatysik.html">Lance Matysik</a></li>
+          <li><a href="people/ssteindorf.html">Shane Steindorf</a></li>
           <li><a href="people/jstodola.html">Jessica Stodola</a></li>
           <li><a href="people/dvanslambrouck1.html">David Van SlamBrouck</a></li>
           <li><a href="people/kolson133.html">Kevin Olson</a></li>
