--- a/people/lmatysik.html
+++ b/people/lmatysik.html
@@ -5,7 +5,7 @@
     <link href="../css/style.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <title>Lance Matysik - Under Construction</title>
+    <title>Lance Matysik</title>
   </head>
   <body id="lmatysik">
     <header>
