--- a/people/kkaufman6.html
+++ b/people/kkaufman6.html
@@ -3,7 +3,7 @@
     <head>
     	<title>Kelsy Kaufman</title>
     	<meta charset="utf-8">
-    	<link href="css/style.css" rel="stylesheet">
+    	<link href="../css/style.css" rel="stylesheet">
     </head>
     
     <body>
