--- a/people/lmatysik.html
+++ b/people/lmatysik.html
@@ -67,7 +67,7 @@
     <section>
       <h3>Work Experience</h3>
       <article>
-        <h4>Pioneer Hi-Bred International Inc. Eau Claire, WI (Researcher's Assistant) 2009-2015
+        <h4>Pioneer Hi-Bred International Inc. Eau Claire, WI (Researcher's Assistant) 2009-2015</h4>
         <ul>
           <li>Assisted the researcher’s with their genetic experiments</li>
           <li>Entered research data into Excel spreadsheets</li>
