--- a/people/zbaxter.html
+++ b/people/zbaxter.html
@@ -53,10 +53,10 @@
       <section>
         <h1>Technology</h1>
         <ul>
-          <li>Programming Languages: JavaScript, Java, Visual Basic, C#, Ruby, HTML5, CSS3, SQL, Lua.</li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>Programming Languages: JavaScript, Java, Visual Basic, C#, Objective-C, Swift, Ruby, HTML5, CSS3, SQL, Lua.</li>
+          <li>Databases: MySQL, MSSQL, SQLite.</li>
+          <li>Software: Git, Subversion, Vim, Microsoft Office.</li>
+          <li>Operating Systems: Mac OSX, Microsoft Windows, Ubuntu.</li>
         </ul>
       </section>
 
