--- a/people/zbaxter.html
+++ b/people/zbaxter.html
@@ -72,6 +72,10 @@
           </ul>
         </article>
       </section>
+      
+      <footer>
+        <a href="../index.html">Return to the home page</a>
+      </footer>
 
     </div>
   </body>
