--- a/people/zbaxter.html
+++ b/people/zbaxter.html
@@ -55,7 +55,7 @@
         <ul>
           <li>Programming Languages: JavaScript, Java, Visual Basic, C#, Objective-C, Swift, Ruby, HTML5, CSS3, SQL, Lua.</li>
           <li>Databases: MySQL, MSSQL, SQLite.</li>
-          <li>Software: Git, Subversion, Vim, Microsoft Office, Virtualbox, VMWare.</li>
+          <li>Software: Git, Subversion, Vim, Microsoft Office, Virtualbox, VMware.</li>
           <li>Operating Systems: Mac OSX, Microsoft Windows, Ubuntu.</li>
         </ul>
       </section>
