added summary section to page

--- a/people/kkaufman6.html
+++ b/people/kkaufman6.html
@@ -22,9 +22,16 @@
               Email
           </a>
       </div><!--end div media-->
+      <section class="summary">
+        <p>I am a student at Chippewa Valley Technical College in Eau Claire, Wisconsin.
+           I am in my fourth semester of the IT-Software Development and IT-Mobile Development
+           programs, and plan on finishing by the spring semester of 2017.
+           I am in the process of looking for an internship so that I can finish my degrees
+           and gain work experience that I will need in the field.</p>
+      </section>
     </div> <!--end div container-->
     <footer>
-        
+        <a title="Index" href="../index.html">Home</a>
     </footer>
   </body>
 
