added kaufmanAchievements section to kkaufman6.html

--- a/people/kkaufman6.html
+++ b/people/kkaufman6.html
@@ -29,6 +29,14 @@
            I am in the process of looking for an internship so that I can finish my degrees
            and gain work experience that I will need in the field.</p>
       </section>
+      <section id="kaufmanAchievements">
+        <h3>Academic Achievements</h3>
+          <p>Member of Phi Theta Kappa since 2015</p>
+          <p>President's List Fall 2015 at Chippewa Valley Technical College</p>
+          <p>Recipient of National Science Foundation STEM Scholarship for 2015-2017</p>
+          <p>Recipient of United Way Grant 2016-2017</p>
+          <p>Have maintained a high GPA throughout the course of my program</p>
+      </section>
     </div> <!--end div container-->
     <footer>
         <a title="Index" href="../index.html">Home</a>
