changed kaufmanAchievements section p tags to an unordered list

--- a/people/kkaufman6.html
+++ b/people/kkaufman6.html
@@ -31,11 +31,13 @@
       </section>
       <section id="kaufmanAchievements">
         <h3>Academic Achievements</h3>
-          <p>Member of Phi Theta Kappa since 2015</p>
-          <p>President's List Fall 2015 at Chippewa Valley Technical College</p>
-          <p>Recipient of National Science Foundation STEM Scholarship for 2015-2017</p>
-          <p>Recipient of United Way Grant 2016-2017</p>
-          <p>Have maintained a high GPA throughout the course of my program</p>
+          <ul>
+          <li>Member of Phi Theta Kappa since 2015</li>
+          <li>President's List Fall 2015 at Chippewa Valley Technical College</li>
+          <li>Recipient of National Science Foundation STEM Scholarship for 2015-2017</li>
+          <li>Recipient of United Way Grant 2016-2017</li>
+          <li>Have maintained a high GPA throughout the course of my program</li>
+          </ul>
       </section>
     </div> <!--end div container-->
     <footer>
