added skills section to kkaufman6.html

--- a/people/kkaufman6.html
+++ b/people/kkaufman6.html
@@ -31,13 +31,41 @@
       </section>
       <section id="kaufmanAchievements">
         <h3>Academic Achievements</h3>
-          <ul>
+        <ul>
           <li>Member of Phi Theta Kappa since 2015</li>
           <li>President's List Fall 2015 at Chippewa Valley Technical College</li>
           <li>Recipient of National Science Foundation STEM Scholarship for 2015-2017</li>
           <li>Recipient of United Way Grant 2016-2017</li>
           <li>Have maintained a high GPA throughout the course of my program</li>
-          </ul>
+        </ul>
+      </section>
+      <section id="skills">
+        <h3>Programming Languages</h3>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>JavaScript</li>
+          <li>Java</li>
+          <li>C#</li>
+          <li>Visual Basic</li>
+          <li>Bash</li>
+          <li>SQL</li>
+        </ul>
+        <h3>Operating Systems</h3>
+        <ul>
+          <li>Ubuntu</li>
+          <li>Debian</li>
+          <li>Mint</li>
+          <li>Fedora</li>
+          <li>Red Hat</li>
+          <li>CentOS</li>
+          <li>Kali Linux</li>
+          <li>Arch Linux</li>
+          <li>SteamOS</li>
+          <li>OpenBSD</li>
+          <li>Android</li>
+          <li>Windows</li>
+        </ul>
       </section>
     </div> <!--end div container-->
     <footer>
