added reference section changed section id of skills to kaufmanSkills

--- a/people/kkaufman6.html
+++ b/people/kkaufman6.html
@@ -39,7 +39,7 @@
           <li>Have maintained a high GPA throughout the course of my program</li>
         </ul>
       </section>
-      <section id="skills">
+      <section id="kaufmanSkills">
         <h3>Programming Languages</h3>
         <ul>
           <li>HTML5</li>
@@ -66,6 +66,16 @@
           <li>Android</li>
           <li>Windows</li>
         </ul>
+        <h3>Other Notable Software Skills</h3>
+        <ul>
+          <li>3ds Max</li>
+          <li>Photoshop CS6</li>
+          <li>Microsoft Office</li>
+        </ul>
+      </section><!--end section skills-->
+      <section id="kaufmanReferences">
+        <h3>References</h3>
+          <p>Available upon request</p>
       </section>
     </div> <!--end div container-->
     <footer>
