added kaufman section to css/style.css

--- a/people/kkaufman6.html
+++ b/people/kkaufman6.html
@@ -6,9 +6,9 @@
   	<link href="../css/style.css" rel="stylesheet">
   </head>
   <body id="kkaufman">
-    <div class="container">
+    <div id="kaufmanContainer">
       <h1>Kelsy J. Kaufman</h1>
-      <div class="media">
+      <div id="kaufmanMedia">
           <a title="LinkedIn" href="https://www.linkedin.com/in/kelsy-kaufman-794577a5">
               LinkedIn
           </a>
