Adds classes and ids

--- a/people/mthalacker1.html
+++ b/people/mthalacker1.html
@@ -5,17 +5,24 @@
     <title>
     </title>
     <link rel="stylesheet" href="../css/style.css" type="text/css">
+  <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
   </head>
   <body>
-    <h1>Miah Thalacker</h1>
-    <nav>
-      <ul>
-        <li>First Item
-        <li>Second Item
-        <li>Third Item
-        <li>Fourth Item
-        <li>Fifth Item
-      </ul>
-    </nav> 
+    <div id="wrapper_miah">
+      <h1 id="heading_miah">
+        Miah Thalacker
+      </h1>
+      <nav id="nav_miah">
+        <ul id="list_miah">
+          <li><h2 class="list_heading_miah">Heading 1</h2> 
+          <li><h2 class="list_heading_miah">Heading 2</h2>
+          <li><h2 class="list_heading_miah">Heading 3</h2>
+          <li><h2 class="list_heading_miah">Heading 4</h2>
+          <li><h2 class="list_heading_miah">Heading 5</h2>
+        </ul>
+      </nav> 
+    </div>
   </body>
 </html>
