Updates mthalacker1.html with headings

--- a/people/mthalacker1.html
+++ b/people/mthalacker1.html
@@ -16,12 +16,34 @@
       </h1>
       <nav id="nav_miah">
         <ul id="list_miah">
-          <li><h2 class="list_heading_miah">Heading 1</h2> 
-          <li><h2 class="list_heading_miah">Heading 2</h2>
-          <li><h2 class="list_heading_miah">Heading 3</h2>
-          <li><h2 class="list_heading_miah">Heading 4</h2>
-          <li><h2 class="list_heading_miah">Heading 5</h2>
+          <li><h2 class="list_heading_miah">Experience</h2> 
+          <li><h2 class="list_heading_miah">Acheivements</h2>
+          <li><h2 class="list_heading_miah">Education</h2>
+          <li><h2 class="list_heading_miah">Other Skills</h2>
+          <li><h2 class="list_heading_miah">Social Links</h2>
         </ul>
+        <article>
+          <section>
+            <h3>Experience</h3>
+            <p>Heading 1 information</p>
+          </section> 
+          <section>
+            <h3>Acheivements</h3>
+            <p>Heading 2 information</p>
+          </section> 
+          <section>
+            <h3>Education</h3>
+            <p>Heading 3 information</p>
+          </section> 
+          <section>
+            <h3>Skills</h3>
+            <p>Heading 4 information</p>
+          </section> 
+          <section>
+            <h3>Connect with me!</h3>
+            <p>Heading 5 information</p>
+          </section> 
+        </article>
       </nav> 
     </div>
   </body>
