fixed my h1, h2, and h3 css error

--- a/people/kkaufman6.html
+++ b/people/kkaufman6.html
@@ -5,7 +5,7 @@
   	<meta charset="utf-8">
   	<link href="../css/style.css" rel="stylesheet">
   </head>
-  <body id="kkaufman">
+  <body class="kkaufman">
     <div id="kaufmanContainer">
       <h1>Kelsy J. Kaufman</h1>
       <div id="kaufmanMedia">
