Add links from nav to sections on mthalacker1.html

--- a/people/mthalacker1.html
+++ b/people/mthalacker1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>
     </title>
     <link rel="stylesheet" href="../css/style.css" type="text/css">
@@ -12,39 +12,149 @@
   <body>
     <div id="wrapper_miah">
       <h1 id="heading_miah">
-        Miah Thalacker
+        Resume Heading
       </h1>
       <nav id="nav_miah">
-        <ul id="list_miah">
-          <li><h2 class="list_heading_miah">Experience</h2> 
-          <li><h2 class="list_heading_miah">Acheivements</h2>
-          <li><h2 class="list_heading_miah">Education</h2>
-          <li><h2 class="list_heading_miah">Other Skills</h2>
-          <li><h2 class="list_heading_miah">Social Links</h2>
+        <ul id="nav_list_miah">
+          <li><h2 class="list_heading_miah"><a href="#experience">Experience</a></h2> 
+          <li><h2 class="list_heading_miah"><a href="#achievements">Achievements</a></h2>
+          <li><h2 class="list_heading_miah"><a href="#education">Education</a></h2>
+          <li><h2 class="list_heading_miah"><a href="#skills">Skills</a></h2>
+          <li><h2 class="list_heading_miah"><a href="#social">Social Links</a></h2>
         </ul>
-        <article>
-          <section>
-            <h3>Experience</h3>
-            <p>Heading 1 information</p>
-          </section> 
-          <section>
-            <h3>Acheivements</h3>
-            <p>Heading 2 information</p>
-          </section> 
-          <section>
-            <h3>Education</h3>
-            <p>Heading 3 information</p>
-          </section> 
-          <section>
-            <h3>Skills</h3>
-            <p>Heading 4 information</p>
-          </section> 
-          <section>
-            <h3>Connect with me!</h3>
-            <p>Heading 5 information</p>
-          </section> 
-        </article>
       </nav> 
+      <article>
+        <section>
+          <h3 class="heading_miah"><a name="experience">Experience</a></h3>
+          <ul id="list_body_miah">
+            <li> 
+              <p class="list_item_miah">
+                Experienced in object-oriented
+                programming; developing, testing and debugging code; 
+                designing interfaces; and administering systems and networks.
+                Bacon ipsum dolor amet spare ribs pig tri-tip doner pork
+                loin. Cow beef ribs ball tip sirloin sausage pork belly
+                capicola ham hock pancetta. Drumstick rump pancetta, pig
+                sausage tenderloin pork chop jerky cow. Meatball pork chop
+                beef ribs chicken landjaeger pork. Ground round turkey
+                turducken kevin short loin tongue doner. Salami andouille
+                picanha, pork loin t-bone tail landjaeger cupim. Chicken
+                filet mignon capicola spare ribs landjaeger, salami pancetta
+                ham hock rump strip steak meatball kevin tenderloin swine.
+                Sirloin cupim short loin swine, doner picanha bacon. Venison
+                pancetta rump drumstick beef. Ball tip tongue turducken
+                kielbasa short ribs pork belly jowl t-bone tri-tip beef rump
+                chuck ground round chicken andouille. Biltong corned beef
+                spare ribs sirloin, filet mignon turducken fatback.
+              </p>
+            </li>
+            <li><h2 class="list_item_miah"><a name="achievements">Achievements</a></h2>
+              <li><h2 class="list_item_miah"><a name="education">Education</a></h2>
+              <p>
+                Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
+                Cow beef ribs ball tip sirloin sausage pork belly capicola ham
+                hock pancetta. Drumstick rump pancetta, pig sausage tenderloin
+                pork chop jerky cow. Meatball pork chop beef ribs chicken
+                landjaeger pork. Ground round turkey turducken kevin short loin
+                tongue doner. Salami andouille picanha, pork loin t-bone tail
+                landjaeger cupim. Chicken filet mignon capicola spare ribs
+                landjaeger, salami pancetta ham hock rump strip steak meatball
+                kevin tenderloin swine.  Sirloin cupim short loin swine, doner
+                picanha bacon. Venison pancetta rump drumstick beef. Ball tip
+                tongue turducken kielbasa short ribs pork belly jowl t-bone
+                tri-tip beef rump chuck ground round chicken andouille. Biltong
+                corned beef spare ribs sirloin, filet mignon turducken fatback.
+              </p>
+              <li><h2 class="list_item_miah"><a name="skills">Skills</a></h2>
+              <p>
+                Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
+                Cow beef ribs ball tip sirloin sausage pork belly capicola ham
+                hock pancetta. Drumstick rump pancetta, pig sausage tenderloin
+                pork chop jerky cow. Meatball pork chop beef ribs chicken
+                landjaeger pork. Ground round turkey turducken kevin short loin
+                tongue doner. Salami andouille picanha, pork loin t-bone tail
+                landjaeger cupim. Chicken filet mignon capicola spare ribs
+                landjaeger, salami pancetta ham hock rump strip steak meatball
+                kevin tenderloin swine.  Sirloin cupim short loin swine, doner
+                picanha bacon. Venison pancetta rump drumstick beef. Ball tip
+                tongue turducken kielbasa short ribs pork belly jowl t-bone
+                tri-tip beef rump chuck ground round chicken andouille. Biltong
+                corned beef spare ribs sirloin, filet mignon turducken fatback.
+              </p>
+              <li><h2 class="list_item_miah"><a name="social">Social Links</a></h2>
+          </ul>
+        </section> 
+        <section>
+          <h3>Acheivements</h3>
+          <p>item 2 information</p>
+          <ul class="list_body_miah">
+            <li><h2 class="list_item_miah">Twitter</h2> 
+            <li><h2 class="list_item_miah">Facebook</h2>
+            <li><h2 class="list_item_miah">Github</h2>
+            <li><h2 class="list_item_miah">IRC</h2>
+            <li><h2 class="list_item_miah">WakaTime</h2>
+          </ul>
+        </section> 
+        <section>
+          <h3>Education</h3>
+          <p>
+            Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin. Cow
+            beef ribs ball tip sirloin sausage pork belly capicola ham hock
+            pancetta. Drumstick rump pancetta, pig sausage tenderloin pork chop
+            jerky cow. Meatball pork chop beef ribs chicken landjaeger pork.
+            Ground round turkey turducken kevin short loin tongue doner. Salami
+            andouille picanha, pork loin t-bone tail landjaeger cupim. Chicken
+            filet mignon capicola spare ribs landjaeger, salami pancetta ham
+            hock rump strip steak meatball kevin tenderloin swine.  Sirloin
+            cupim short loin swine, doner picanha bacon. Venison pancetta rump
+            drumstick beef. Ball tip tongue turducken kielbasa short ribs pork
+            belly jowl t-bone tri-tip beef rump chuck ground round chicken
+            andouille. Biltong corned beef spare ribs sirloin, filet mignon
+            turducken fatback.
+          </p>
+        </section> 
+        <section>
+          <h3>Skills</h3>
+          <p>
+            Bacon ipsum dolor amet spare ribs pig tri-tip doner pork
+            loin. Cow beef ribs ball tip sirloin sausage pork belly
+            capicola ham hock pancetta. Drumstick rump pancetta, pig
+            sausage tenderloin pork chop jerky cow. Meatball pork chop
+            beef ribs chicken landjaeger pork. Ground round turkey
+            turducken kevin short loin tongue doner. Salami andouille
+            picanha, pork loin t-bone tail landjaeger cupim. Chicken
+            filet mignon capicola spare ribs landjaeger, salami pancetta
+            ham hock rump strip steak meatball kevin tenderloin swine.
+            Sirloin cupim short loin swine, doner picanha bacon. Venison
+            pancetta rump drumstick beef. Ball tip tongue turducken
+            kielbasa short ribs pork belly jowl t-bone tri-tip beef rump
+            chuck ground round chicken andouille. Biltong corned beef
+            spare ribs sirloin, filet mignon turducken fatback.
+          </p>
+        </section> 
+        <section>
+          <h3>Connect with me!</h3>
+          <p>
+            Bacon ipsum dolor amet spare ribs pig tri-tip doner pork
+            loin. Cow beef ribs ball tip sirloin sausage pork belly
+            capicola ham hock pancetta. Drumstick rump pancetta, pig
+            sausage tenderloin pork chop jerky cow. Meatball pork chop
+            beef ribs chicken landjaeger pork. Ground round turkey
+            turducken kevin short loin tongue doner. Salami andouille
+            picanha, pork loin t-bone tail landjaeger cupim. Chicken
+            filet mignon capicola spare ribs landjaeger, salami pancetta
+            ham hock rump strip steak meatball kevin tenderloin swine.
+            Sirloin cupim short loin swine, doner picanha bacon. Venison
+            pancetta rump drumstick beef. Ball tip tongue turducken
+            kielbasa short ribs pork belly jowl t-bone tri-tip beef rump
+            chuck ground round chicken andouille. Biltong corned beef
+            spare ribs sirloin, filet mignon turducken fatback.
+          </p>
+        </section> 
+      </article>
     </div>
+    <script>
+
+    </script>
   </body>
 </html>
