Add more updates to mthalacker1.html

--- a/people/mthalacker1.html
+++ b/people/mthalacker1.html
@@ -25,9 +25,9 @@
       </nav> 
       <article>
         <section>
-          <h3 class="heading_miah"><a name="experience">Experience</a></h3>
           <ul id="list_body_miah">
             <li> 
+              <h3 class="heading_miah"><a name="experience">Experience</a></h3>
               <p class="list_item_miah">
                 Experienced in object-oriented
                 programming; developing, testing and debugging code; 
@@ -48,8 +48,11 @@
                 spare ribs sirloin, filet mignon turducken fatback.
               </p>
             </li>
-            <li><h2 class="list_item_miah"><a name="achievements">Achievements</a></h2>
-              <li><h2 class="list_item_miah"><a name="education">Education</a></h2>
+            <li>
+              <h2 class="list_item_miah"><a name="achievements">Achievements</a></h2>
+            </li>
+            <li>
+              <h2 class="list_item_miah"><a name="education">Education</a></h2>
               <p>
                 Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
                 Cow beef ribs ball tip sirloin sausage pork belly capicola ham
@@ -65,7 +68,9 @@
                 tri-tip beef rump chuck ground round chicken andouille. Biltong
                 corned beef spare ribs sirloin, filet mignon turducken fatback.
               </p>
-              <li><h2 class="list_item_miah"><a name="skills">Skills</a></h2>
+            </li>
+            <li>
+              <h2 class="list_item_miah"><a name="skills">Skills</a></h2>
               <p>
                 Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
                 Cow beef ribs ball tip sirloin sausage pork belly capicola ham
@@ -81,12 +86,14 @@
                 tri-tip beef rump chuck ground round chicken andouille. Biltong
                 corned beef spare ribs sirloin, filet mignon turducken fatback.
               </p>
-              <li><h2 class="list_item_miah"><a name="social">Social Links</a></h2>
+            </li>
+            <li>
+              <h2 class="list_item_miah"><a name="social">Social Links</a></h2>
+            </li>
           </ul>
         </section> 
         <section>
           <h3>Acheivements</h3>
-          <p>item 2 information</p>
           <ul class="list_body_miah">
             <li><h2 class="list_item_miah">Twitter</h2> 
             <li><h2 class="list_item_miah">Facebook</h2>
@@ -154,7 +161,7 @@
       </article>
     </div>
     <script>
-
+      
     </script>
   </body>
 </html>
