added info section to kkaufman6.html that includes more personal info

--- a/people/kkaufman6.html
+++ b/people/kkaufman6.html
@@ -8,6 +8,11 @@
   <body class="kkaufman">
     <div id="kaufmanContainer">
       <h1>Kelsy J. Kaufman</h1>
+      <div id=kaufmanInfo>
+        <p>1340 Woodland Ave.<br>
+           Eau Claire, WI 54701<br>
+           715-529-5923</p>
+      </div>
       <div id="kaufmanMedia">
           <a title="LinkedIn" href="https://www.linkedin.com/in/kelsy-kaufman-794577a5">
               LinkedIn
