--- a/people/mthalacker1.html
+++ b/people/mthalacker1.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
+      Miah Thalacker 
     </title>
     <link rel="stylesheet" href="../css/style.css" type="text/css">
   <!--[if lt IE 9]>
@@ -10,25 +11,25 @@
   <![endif]-->
   </head>
   <body>
-    <div id="wrapper_miah">
+    <div id="wrapper_miah" class="container">
       <h1 id="heading_miah">
         Resume Heading
       </h1>
       <nav id="nav_miah">
         <ul id="nav_list_miah">
-          <li><h2 class="list_heading_miah"><a href="#experience">Experience</a></h2> 
-          <li><h2 class="list_heading_miah"><a href="#achievements">Achievements</a></h2>
-          <li><h2 class="list_heading_miah"><a href="#education">Education</a></h2>
-          <li><h2 class="list_heading_miah"><a href="#skills">Skills</a></h2>
-          <li><h2 class="list_heading_miah"><a href="#social">Social Links</a></h2>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#achievements">Achievements</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#social">Social Links</a></li>
         </ul>
       </nav> 
       <article>
         <section>
           <ul id="list_body_miah">
-            <li> 
+            <li class="list_item_miah"> 
               <h3 class="heading_miah"><a name="experience">Experience</a></h3>
-              <p class="list_item_miah">
+              <p>
                 Experienced in object-oriented
                 programming; developing, testing and debugging code; 
                 designing interfaces; and administering systems and networks.
@@ -48,11 +49,11 @@
                 spare ribs sirloin, filet mignon turducken fatback.
               </p>
             </li>
-            <li>
-              <h2 class="list_item_miah"><a name="achievements">Achievements</a></h2>
+            <li class="list_item_miah">
+              <h2 class="list_heading_miah"><a name="achievements">Achievements</a></h2>
             </li>
-            <li>
-              <h2 class="list_item_miah"><a name="education">Education</a></h2>
+            <li class="list_item_miah">
+              <h2 class="list_heading_miah"><a name="education">Education</a></h2>
               <p>
                 Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
                 Cow beef ribs ball tip sirloin sausage pork belly capicola ham
@@ -69,8 +70,8 @@
                 corned beef spare ribs sirloin, filet mignon turducken fatback.
               </p>
             </li>
-            <li>
-              <h2 class="list_item_miah"><a name="skills">Skills</a></h2>
+            <li class="list_item_miah">
+              <h2 class="list_heading_miah"><a name="skills">Skills</a></h2>
               <p>
                 Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
                 Cow beef ribs ball tip sirloin sausage pork belly capicola ham
@@ -87,19 +88,19 @@
                 corned beef spare ribs sirloin, filet mignon turducken fatback.
               </p>
             </li>
-            <li>
-              <h2 class="list_item_miah"><a name="social">Social Links</a></h2>
+            <li class="list_item_miah">
+              <h2 class="list_heading_miah"><a name="social">Social Links</a></h2>
             </li>
           </ul>
         </section> 
         <section>
           <h3>Acheivements</h3>
           <ul class="list_body_miah">
-            <li><h2 class="list_item_miah">Twitter</h2> 
-            <li><h2 class="list_item_miah">Facebook</h2>
-            <li><h2 class="list_item_miah">Github</h2>
-            <li><h2 class="list_item_miah">IRC</h2>
-            <li><h2 class="list_item_miah">WakaTime</h2>
+            <li><h2>Twitter</h2> 
+            <li><h2>Facebook</h2>
+            <li><h2>Github</h2>
+            <li><h2>IRC</h2>
+            <li><h2>WakaTime</h2>
           </ul>
         </section> 
         <section>
@@ -160,8 +161,8 @@
         </section> 
       </article>
     </div>
-    <script>
-      
+    <script type="text\javascript">
+    
     </script>
   </body>
 </html>
